changes to typography

--- a/css/styles.css
+++ b/css/styles.css
@@ -42,7 +42,7 @@ button {
 }
 
 body {
-  font-family: "ARS Maquette", "Helvetica Neue", Arial, sans-serif;
+  font-family: arial, sans-serif;
   font-size: 14px;
   font-weight: 300;
   width: 100%;
